--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,11 @@
       <artifactId>mongodb-driver-sync</artifactId>
       <version>3.12.9</version>
     </dependency>
+    <!-- <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-mongodb</artifactId>
+      <version>2.5.5</version>
+    </dependency> -->
   </dependencies>
 
   <!--Build configuration-->
